# py3-win32-symlink-resolve

./: README.md  pyproject.toml  resolve_win32_symlink.py
resolve_win32_symlink/: __init__.py
